syntax = "proto3";
package slog.proto;

message Configuration {
  repeated bytes addresses = 1;
  uint32 broker_port = 2;
  uint32 num_replicas = 3;
  uint32 num_partitions = 4;
}